--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,13 @@ name = "zamm_yang"
 version = "0.0.1"
 authors = ["Amos Jun-yeung Ng <me@amos.ng>"]
 edition = "2018"
+description = "A basic, experimental code generator"
+readme = "README.md"
+repository = "https://github.com/amosjyng/yang"
+license = "GPL-3.0"
+keywords = ["codegen", "code-generation"]
+categories = ["command-line-utilities", "development-tools"]
+publish = false
 
 [[bin]]
 name = "yang"
