--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ name = "yang"
 path = "src/main.rs"
 
 [dependencies]
-clap = "^2.33.3"
+clap = { version = "^2.33.3", features = ["wrap_help"] }
 path_abs = "^0.5.0"
 textwrap = "^0.12.1"
 zamm_yin = "^0.0.2"
