--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/main.rs"
 clap = { version = "^2.33.3", features = ["wrap_help"] }
 path_abs = "^0.5.0"
 textwrap = "^0.12.1"
-zamm_yin = "^0.0.2"
+zamm_yin = "0.0.3"
 
 [dev-dependencies]
 indoc = "^1.0"
