--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ path = "src/main.rs"
 clap = { version = "^2.33.3", features = ["color", "wrap_help"] }
 path_abs = "^0.5.0"
 textwrap = "^0.12.1"
-zamm_yin = "0.0.3"
+yaml-rust = "^0.4"
+zamm_yin = "0.0.4"
 
 [dev-dependencies]
 indoc = "^1.0"
