--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "^2.33.3", features = ["color", "wrap_help"] }
 path_abs = "^0.5.0"
+pulldown-cmark = "^0.8.0"
 textwrap = "^0.12.1"
 yaml-rust = "^0.4"
 zamm_yin = "0.0.4"
