--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/main.rs"
 
 [dependencies]
 clap = { version = "^2.33.3", features = ["color", "wrap_help"] }
+colored = "^2"
 itertools = "^0.9.0"
 path_abs = "^0.5.0"
 pulldown-cmark = "^0.8.0"
