--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ itertools = "^0.9.0"
 path_abs = "^0.5.0"
 pulldown-cmark = "^0.8.0"
 textwrap = "^0.12.1"
+toml = "^0.5.7"
 yaml-rust = "^0.4"
 zamm_yin = "0.0.5"
 
