--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 [dependencies]
 clap = { version = "^2.33.3", features = ["color", "wrap_help"] }
 colored = "^2"
+heck = "0.3.1"
 indoc = "^1.0"
 itertools = "^0.9.0"
 path_abs = "^0.5.0"
