Revert "Skip format check due to yang-0.0.8 limitation"
This reverts commit 5a7507cab2eaca7224fccdaa387309bb0ea711c9.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ before_install:
   - rustup component add clippy
 script:
   - cargo test --verbose
+  - cargo fmt -- --check
   - cargo clippy --all-targets --all-features -- -D warnings
