--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,4 @@ indoc = "^1.0"
 itertools = "^0.9.0"
 path_abs = "^0.5.0"
 textwrap = "^0.12.1"
-zamm_yin = "0.0.13"
+zamm_yin = {path = "C:/Users/Amos Ng/Documents/projects/zamm/yin"}
