--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ itertools = "0.9.0"
 path_abs = "0.5.0"
 textwrap = "0.12.1"
 zamm_yin = "0.1.0"
+semver = "0.9.0"
 
 [build-dependencies]
 zamm = "0.1.1"
