--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,14 @@ keywords = ["codegen", "code-generation"]
 categories = ["development-tools"]
 
 [dependencies]
+colored = "2"
 heck = "0.3.1"
 indoc = "1.0"
 itertools = "0.9.0"
 path_abs = "0.5.0"
 textwrap = "0.12.1"
-zamm_yin = "=0.1.3"
 semver = "0.9.0"
+zamm_yin = "=0.1.3"
 
 [build-dependencies]
 zamm = "0.1.1"
